--- a/packages/document/main-doc/docs/en/guides/advanced-features/page-performance/optimize-bundle.mdx
+++ b/packages/document/main-doc/docs/en/guides/advanced-features/page-performance/optimize-bundle.mdx
@@ -46,16 +46,12 @@ See the [performance.bundleAnalyze](/configure/app/performance/bundle-analyze.ht
 
 Modern.js will compile the code according to the project's Browserslist config, and inject some Polyfills. If the project does not need to be compatible with legacy browsers, you can adjust the Browserslist and drop some legacy browsers, thereby reducing the compilation overhead on syntax and polyfill.
 
-Modern.js's default Browserslist config is:
+Modern.js's projects are created with the [default](https://github.com/browserslist/browserslist/blob/7b0ff670e997c53b13d44e2150ab09807a20ed6b/index.js#L477) Browserslist config.
+
+For example, if you only need to be compatible with the latest Chrome versions, you can change it to:
 
 ```js
-['> 0.01%', 'not dead', 'not op_mini all'];
-```
-
-For example, if you only need to be compatible with browsers above Chrome 61, you can change it to:
-
-```js
-['Chrome >= 61'];
+['last 2 chrome versions'];
 ```
 
 :::tip
