fix(doc): fix typos

--- a/packages/document/main-doc/docs/en/guides/advanced-features/build-performance.mdx
+++ b/packages/document/main-doc/docs/en/guides/advanced-features/build-performance.mdx
@@ -24,7 +24,7 @@ If you are not using Rspack yet, you can switch to Rspack build mode to improve 
 
 In general, updating Node.js to the latest [LTS release](https://github.com/nodejs/release#release-schedule) will help improve build performance.
 
-Especially for devices with Apple M1/M2 chips, it is recommended to use Node 18.
+Especially for devices with Apple M1/M2 chips, it is recommended to use at least Node 18.
 
 Node >= 16 provides Apple Silicon binaries by default, so the performance on M1/M2 models will be greatly improved than Node 14. According to our tests, **After switching from Node 14 to Node >= 16, the compilation speed can be improved by more than 100%**.
 
