--- a/packages/document/main-doc/docs/en/guides/advanced-features/page-performance/optimize-bundle.mdx
+++ b/packages/document/main-doc/docs/en/guides/advanced-features/page-performance/optimize-bundle.mdx
@@ -64,7 +64,7 @@ Please read the [Browserslist](https://rsbuild.dev/guide/advanced/browserslist) 
 
 ## Usage polyfill
 
-When it is clear that third-party dependencies do not require additional polyfill, you can set [output.polyfill](/configure/app/output/polyfill.html) to `usage`.
+When it is clear that third-party dependencies do not require additional polyfills, you can set [output.polyfill](/configure/app/output/polyfill.html) to `usage`.
 
 In `usage` mode, Modern.js analyzes the syntax used in the source code and injects the required polyfill code on demand to reduce the size of polyfill.
 
